# lumen

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  claude-history-session.jsonl  manifest
.beads/: beads.base.jsonl  beads.base.meta.json  beads.left.jsonl  beads.left.meta.json  issues.jsonl  metadata.json
docs/: design.md  fluency-validation.md  grammar.ebnf  llm-context.md
examples/: actors.lm  assert_demo.lm  bench_nogc  bench_nogc.lm  bench_strings  bench_strings.lm  bricks  bricks.lm  concurrent_server  concurrent_server.lm  error_chain.lm  ffi_time  ffi_time.lm  file_io.lm  gc_stress.lm  generics_demo.lm  hello.lm  interp_demo.lm  list_utils.lm  map_demo.lm  match_demo.lm  multi_actor.lm  println_universal.lm  sum_of_squares.lm  tcp_echo  tcp_echo.lm  web_server  web_server.lm
runtime/: raylib_bridge.c  rt.c
src/: ast.rs  codegen.rs  dwarf.rs  fmt.rs  imports.rs  lexer.rs  lib.rs  lsp.rs  main.rs  native.rs  parser.rs  repl.rs  span.rs  types.rs  wasm.rs
std/: bytes.lm  fs.lm  http.lm  int.lm  io.lm  list.lm  map.lm  math.lm  net.lm  raylib.lm  string.lm  test.lm
tests/: .gitignore  fmt.rs  golden.rs  kitchen_sink.expected  kitchen_sink.lm  kitchen_sink.rs  lsp.rs  lumen_tests.rs  overflow.rs  programs.rs  repl.rs
tests/lumen/: actor_chain.lm  actor_stress.lm  arena_basic.lm  arena_list.lm  closures.lm  generic_extern.lm  globals.lm  map_scalar_keys.lm  map_utils.lm  smoke.lm
tests/programs/: char_basic.expected  char_basic.lm  generic_call_chain.expected  generic_call_chain.lm  generic_id.expected  generic_id.lm  generic_inferred_return.expected  generic_inferred_return.lm  generic_list_ops.expected  generic_list_ops.lm  generic_maybe.expected  generic_maybe.lm  generic_pair.expected  generic_pair.lm  list_higher_order.expected  list_higher_order.lm  map_basic.expected  map_basic.lm  nested_match.expected  nested_match.lm  result_question.expected  result_question.lm  string_interp.expected  string_interp.lm  string_split_chain.expected  string_split_chain.lm  trim_unicode.expected  trim_unicode.lm
tooling/tree-sitter-lumen/: .gitignore  README.md  grammar.js  package.json
(+10 files in other folders)
