[package]
name = "lumen"
version = "0.1.0"
edition = "2021"
description = "Lumen — a statically-typed, AI-first language compiling to Wasm"
license = "MIT"
publish = false

[[bin]]
name = "lumen"
path = "src/main.rs"

[lib]
name = "lumen"
path = "src/lib.rs"

[dependencies]
wasm-encoder = "0.246"
cranelift-codegen = "0.130"
cranelift-frontend = "0.130"
cranelift-module = "0.130"
cranelift-object = "0.130"
cranelift-native = "0.130"
target-lexicon = "0.13"

[features]
wasm-runtime = ["wasmtime", "wasmtime-wasi"]

[dependencies.wasmtime]
version = "43"
default-features = false
features = ["cranelift", "runtime"]
optional = true

[dependencies.wasmtime-wasi]
version = "43"
optional = true

[dev-dependencies]
wasmparser = "0.246"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
