[package]
name = "lumen"
version = "0.1.0"
edition = "2021"
description = "Lumen — a statically-typed, AI-first language compiling to native code"
license = "MIT"
publish = false

[[bin]]
name = "lumen"
path = "src/main.rs"

[lib]
name = "lumen"
path = "src/lib.rs"

[dependencies]
cranelift-codegen = "0.130"
cranelift-frontend = "0.130"
cranelift-module = "0.130"
cranelift-object = "0.130"
cranelift-native = "0.130"
target-lexicon = "0.13"
gimli = { version = "0.33", default-features = false, features = ["write"] }
object = { version = "0.38", default-features = false, features = ["write"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = "thin"
